# dbt-workflows-factory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/scripts/: bump_version.py
.github/workflows/: prepare-release.yml  publish.yml  template-sync.yml  test-linting.yml
docs/: pre-commit-config.md
scripts/: create_workflow_requests.sh
src/: README.md
src/DbtWorkflowsConverter/: dbt_workflows_converter.py  dbt_workflows_converter_params.py  flow_builder.py  task_builder.py  workflow_parameters.py
src/DbtWorkflowsConverter/dag_factory/: dbt_graph_factory.py  gateway.py
src/DbtWorkflowsConverter/utils/: config_utils.py  node_type.py
src/dbt_workflows_converter/: compile.py  dbt_workflows_converter.py  flow_builder.py  params.py  task_builder.py  yaml_builder.py
src/dbt_workflows_converter/dag_factory/: dag_factory.py
src/dbt_workflows_factory/: cli.py  compile.py  dbt_workflows_converter.py  flow_builder.py  params.py  task.py  task_builder.py  tasks.py  yaml_builder.py
src/dbt_workflows_factory/dag_factory/: dag_factory.py
src/python_package/: dbt_workflows_converter.py  flow_builder.py  task_builder.py  workflow_parameters.py
src/python_package/dag_factory/: dbt_graph_factory.py  gateway.py  utils.py
src/python_package/utils/: config_utils.py
tests/: manifest.json  manifest_task_group_tests.json  test_methods.py
tests/unit/dbt_workflows_factory/: test_cli.py  test_dag_factory.py  test_dbt_workflow_converter.py  test_flow_builder.py  test_task.py  test_tasks.py
tests/unit/dbt_workflows_factory/test_data/: manifest.json  manifest_2.json
