[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name =  "dbt-workflows-converter"
authors = [
    {name = "GetInData", email = "labs@getindata.com"},
]
description = "Sample Python Project for creating a new Python Module"
readme = "README.md"
classifiers = [
    "Framework :: data-pipelines-cli",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.7"
dynamic = ["version"]

[tool.setuptools]
packages = ["data_pipelines_cli"]

[project.entry_points]
pytest11 = [
    "data_pipelines_cli = data_pipelines_cli.hello_world",
]
