[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "dbt-workflows-factory"
authors = [
    {name = "Piotr Pękala", email = "piotr.pekala@getindata.com"},
    {name = "Piotr Tutak", email = "piotr.tutak@getindata.com"},
]
description = "DBT workflows factory for Google Cloud Platform"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dependencies = [
    "dbt-graph-builder>=0.5.0",
    "click>=8.1.3",
]
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts"]
number = 4
recursive = true
targets = "src"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",
    "D100",  # public module
    "D104",  # public package
    "D105",  # magic methods
    "DCO010", # duplicate of public method
    "DCO060", # public attributes - they're already documented if it is a property.
]
exclude = ["build", "tests"]
convention = "google"

[tool.mypy]
packages = ["src"]
exclude = ["tests"]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = [
    "src.dbt_workflows_factory.tasks",
    "src.dbt_workflows_factory.yaml_builder",
]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "src.dbt_workflows_factory.cli"
disallow_untyped_decorators = false


[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-vv", "-s"]
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-github-actions-annotate-failures",
]
